<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context=".LoginPage" >

    <Button
        android:id="@+id/loginButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/registerButton"
        android:layout_alignBottom="@+id/registerButton"
        android:layout_alignLeft="@+id/inputUsername"
        android:text="@string/login" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/_empty" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/inputUsername"
        android:layout_below="@+id/inputUsername"
        android:layout_marginTop="21dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/loginFail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/_empty" />

    <TextView
        android:id="@+id/introLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputUsername"
        android:layout_below="@+id/titleMain"
        android:layout_marginTop="25dp"
        android:text="@string/intro_login" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/introLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/titleMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/title_main"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
